--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -4,10 +4,10 @@ import MainLayout from '../layouts/MainLayout.astro';
 
 <MainLayout>
   <!-- Hero -->
-  <section
-    class="relative bg-cover bg-center bg-no-repeat min-h-[520px] sm:min-h-[620px] flex items-center"
-    style="background-image: url('/img/city-hero.avif')"
-  >
+<section
+  class="relative bg-cover bg-center bg-no-repeat min-h-[520px] sm:min-h-[620px] flex items-center"
+  style={`background-image: url('${import.meta.env.BASE_URL}img/city-hero.avif')`}
+>
     <div class="absolute inset-0 bg-ink/75"></div>
 
     <div class="container-page pt-12 pb-12 sm:pt-16 sm:pb-16 relative z-10">
